--- a/gb/11/9/14/n3372489.md
+++ b/gb/11/9/14/n3372489.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zwvwgb377/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zwvwgb377/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zwvwgb377/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zwvwgb377/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zwvwgb377/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>战机失事  蓝绿扯军购预算</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元9月14日报导】（中央社记者吕欣憓、苏龙麒台北14日电）民主进步党立法院党团今天表示，中国国民党杯葛<ahref="https://github.com/zwvwgb377/djy/blob/master/gb/tag/%E5%86%9B%E8%B4%AD.md#1">军购</a>预算，导致飞行员只能驾驶老旧军机，国民党籍立法委员林郁方回应，国民党从未杯葛过军购预算。</p>
+<p>【大纪元9月14日报导】（中央社记者吕欣憓、苏龙麒台北14日电）民主进步党立法院党团今天表示，中国国民党杯葛<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%86%9B%E8%B4%AD.md#1">军购</a>预算，导致飞行员只能驾驶老旧军机，国民党籍立法委员林郁方回应，国民党从未杯葛过军购预算。</p>
 <p>隶属空军花莲基地的一架RF-5E侦照机与一架F-5F双座战斗教练机，昨天在宜兰东澳失联。</p>
 <p>民主进步党立法院党团干事长蔡煌琅今天表示，如果民国96年间，预算新台币1586亿余元的“凤隼专案”能够顺利通过，可以采购66架F-16 C/D型战机，台湾在民国103年就可以有3个作战团队，就不用让F-5F这些战机飞上天。</p>
 <p>蔡煌琅说，国民党团在96年间杯葛、冻结“凤隼专案”预算，是导致飞行员必须开老旧飞机进行训练的最主要原因。</p>
@@ -16,47 +16,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/6/23/n3294279.md#1">对美军购 马英九：美同意即可动预算</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/6/28/n3299616.md#1">马英九晤薄瑞光  重申对美军购</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/7/7/n3308279.md#1">台立委访美  争取军购</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/7/27/n3326841.md#1">美媒指未积极军购  台军方再驳斥</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/7/27/n3327029.md#1">美媒指台推动军购不力 台国防部反驳</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/8/3/n3333773.md#1">军购战机决心遭疑 国防部驳斥</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/8/6/n3336350.md#1">投书华时  台驻美处重申军购决心</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/8/30/n3358370.md#1">台向美军购非军备竞赛</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/8/31/n3359429.md#1">国防部：台美互信  无军购障碍</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/22/n13664896.md#1">东航客机失事 苏贞昌：中国若有需要我们愿意尽力</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/23/n3294279.md#1">对美军购 马英九：美同意即可动预算</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/28/n3299616.md#1">马英九晤薄瑞光  重申对美军购</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/7/7/n3308279.md#1">台立委访美  争取军购</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/7/27/n3326841.md#1">美媒指未积极军购  台军方再驳斥</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/7/27/n3327029.md#1">美媒指台推动军购不力 台国防部反驳</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/8/3/n3333773.md#1">军购战机决心遭疑 国防部驳斥</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/8/6/n3336350.md#1">投书华时  台驻美处重申军购决心</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/8/30/n3358370.md#1">台向美军购非军备竞赛</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/8/31/n3359429.md#1">国防部：台美互信  无军购障碍</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753448.md#1">朱立伦：国民党是亲美政党 续抗共产主义</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7931425.md#1" target="_blank">手术前一刻 老伴的膀胱癌消失了</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/30/n10099688.md#1" target="_blank">共产暴政录：上山下乡运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/21/12/10/n13430091.md#1">【百年真相】革命还是暴动？湖南农民运动真相</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/9/n13632327.md#1">【百年真相】逆行的红二代 林立果“讨毛檄文”</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/17/n13653509.md#1">【未解之谜】用数学公式证明神的存在</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/15/n13646805.md#1">为何说“春分”一刻值千金？</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/10/n13635781.md#1">【人生之钥】状元冯京 两娶宰相女三魁天下元</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13663071.md#1">【探索时分】于北辰：台湾会成乌克兰吗？（上）</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13663256.md#1">【远见快评】中共曝挺俄底牌 普京寻求体面退场</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13663333.md#1">【神韵原创音乐】2019 神韵交响乐《大明侍卫》</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656045.md#1">豆制品抗癌还是致癌？大豆误区一定要知道</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/19/n13658674.md#1">【新闻看点】传俄中将司令阵亡 俄军三大失策</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/7/n13626998.md#1">营养师点评：吃九类超级食物 有助长寿</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13660370.md#1">曾志伟承认TVB逾500人确诊 拟实行封闭管理</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13663163.md#1">憔悴落魄剧照引热议 范冰冰晒近照回应</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13660443.md#1">第94届奥斯卡3大变革 力图挽救收视危机</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/21/n13661460.md#1">Red Velvet盼成为春季女王 曝今年有许多新作</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/19/n13658154.md#1">《坏蛋联盟》影评：改过向善永远不嫌晚！</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/18/n13656045.md#1">豆制品抗癌还是致癌？大豆误区一定要知道</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/12/n13640944.md#1">蛋白质不仅有助增肌 还有2大好处</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/17/n13652676.md#1">蓝莓有7大好处 1吃法摄取最完整花青素</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/14/n13645679.md#1">十大快乐食物 吃对了还滋养肠道好菌</a></li>
-<li><a href="https://github.com/zwvwgb377/djy/blob/master/gb/22/3/20/n13659347.md#1">【美食天堂】照烧鸡腿做法～黄金比例照烧酱汁！</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zwvwgb377/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zwvwgb377/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/11/9/14/n3372489.htm">战机失事  蓝绿扯军购预算</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/11/9/14/n3372489.htm">战机失事  蓝绿扯军购预算</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zwvwgb377/djy/blob/master/gb/11/9/14/n3372489.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zwvwgb377/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zwvwgb377/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zwvwgb377/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zwvwgb377/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/11/9/14/n3372489.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
